--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,8 @@ name: Scheduled Discord DM
 
 on:
   schedule:
-    # 毎10分ごとに実行
     - cron: '*/10 * * * *'
+  workflow_dispatch: {}   # ← これを足す！
 
 jobs:
   send_dm:
