--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,8 +2,9 @@ name: Scheduled Discord DM
 
 on:
   schedule:
-    - cron: '*/10 * * * *'
-  workflow_dispatch: {}   # ← これを足す！
+    # UTC 09–14 時台が JST 18–23 時台に相当
+    - cron: '*/10 9-14 * * *'
+    workflow_dispatch: {}  # 手動実行用
 
 jobs:
   send_dm:
